chore: baseline -navigation + floor map working